AM_CFLAGS = -Wno-format -Wall
bin_PROGRAMS = travel_wave remap

travel_wave_SOURCES = cg_method.c io.c main.c memory.c mp_special_functions.c newton.c operators.c pcg_method.c mp_mapping.c 
remap_SOURCES = cg_method.c io.c remap.c memory.c newton.c operators.c pcg_method.c mp_special_functions.c mp_mapping.c
